baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_pattern_binding_no_cascade/baml_tests__diagnostic_errors__duplicate_pattern_binding_no_cascade__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Person {
  age: int
  name: string
}
class user.Person$stream {
  age: int | null
  name: string | null
}
function user.int_last(person: user.Person) -> string  [expr] {
  { let Person { name: item, age: item } = person } item
}
function user.string_last(person: user.Person) -> int  [expr] {
  { let Person { age: item, name: item } = person } item
}
