baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_pattern_binding_no_cascade/baml_tests__diagnostic_errors__duplicate_pattern_binding_no_cascade__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Person {
  age: int
  name: string
}
function user.string_last(person: user.Person) -> int throws never {
  { : !error
    let Person { age: item, name: item } = person : user.Person
    item : !error
  }
}
function user.int_last(person: user.Person) -> string throws never {
  { : !error
    let Person { name: item, age: item } = person : user.Person
    item : !error
  }
}
class user.Person$stream {
  age: int | null
  name: string | null
}
