baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_pattern_binding_no_cascade/baml_tests__diagnostic_errors__duplicate_pattern_binding_no_cascade__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] E0094

  × duplicate binding `item` in pattern
   ╭─[main.baml:9:15]
 8 │         age: let item,
   ·              ────┬───
   ·                  ╰── `item` first bound here
 9 │         name: let item,
   ·               ────┬───
   ·                   ╰── `item` bound again here
   ╰────

  [hir] E0094

  × duplicate binding `item` in pattern
    ╭─[main.baml:17:14]
 16 │         name: let item,
    ·               ────┬───
    ·                   ╰── `item` first bound here
 17 │         age: let item,
    ·              ────┬───
    ·                  ╰── `item` bound again here
    ╰────
